src/components/banner/banner.scss
@import '../../assets/scss/variables';
@import '../../assets/scss/utilities';

.banner {
  position: relative;
  overflow: hidden;
  flex-basis: 100%;
  display: flex;
  align-items: center;
  justify-content: center;

  &.banner--vertical-bottom {
    @include breakpoint(sm) {
      align-items: flex-end;
    }
  }

  &:focus-within .bold-headline a:focus {
    text-decoration: underline;
  }

  &__container {

    margin: 0 auto;
    width: 100%;
    z-index: 1;

    @include breakpoint(sm) {
      z-index: 1;
      max-width: 81.875em;
      top: 0;
    }
  }

  img {
    width: 100%;
  }

  &__image {
    overflow: visible;

    img {
      display: block;
      width: 100%;
      -o-object-fit: cover;
      object-fit: cover;
      position: absolute;
      height: 100%;
      top: 0;

    }
  }

  &__text {
    z-index: 1;
  }

  &__content {
    display: grid;
    width: 100%;
    padding: $gutter;
    z-index: 1;
    flex-wrap: wrap;
    align-content: center;
    flex-direction: column;
    background: transparent;
    width: 100%;
    background: transparent;

    @include breakpoint(sm) {
      padding: 1.25rem 0 2rem 0;
    }

    >* {
      flex-basis: 100%;
    }

    .bttn {
      margin-right: auto;
      margin-left: 0;
      z-index: 1;
    }

    @include breakpoint(container) {
      padding: $gutter 0;
    }
  }

  h2:not([class*="bold-headline"]),
  h3:not([class*="bold-headline"]),
  h4:not([class*="bold-headline"]),
  h5:not([class*="bold-headline"]),
  h6:not([class*="bold-headline"]),
  blockquote {
    color: #fff;

    a {
      color: #fff;
    }
  }


  p {
    line-height: 1.5;
    margin-top: 0;
    color: #fff;
    text-shadow: 0 1px 1px #000;

    a {
      position: relative;
      z-index: 1;
      color: #fff;
    }
  }

  // bg variants
  // @todo This should probably be resolved with https://sass-lang.com/documentation/values/maps#using-maps
  &.bg-pattern--brain,
  &.bg-pattern--brain-reversed,
  &.bg--gold {
    color: $secondary;

    p {
      color: $secondary;
      font-weight: normal;
      text-shadow: none;

      a {
        color: $secondary;
      }
    }

    h2:not([class*="bold-headline"]),
    h3:not([class*="bold-headline"]),
    h4:not([class*="bold-headline"]),
    h5:not([class*="bold-headline"]),
    h6:not([class*="bold-headline"]),
    blockquote {
      color: $secondary;

      a {
        color: $secondary;
      }
    }

    .bold-headline.bold-headline--negative {
      color: $secondary;
      text-shadow: none;

      a {
        color: $secondary;
      }
    }
  }

  &.banner--gradient-left-reversed:not([class*="bg--black"]):not([class*="bg-pattern--brain-black"]) {
    @include breakpoint(container) {
      color: $secondary;
    }

    h2:not([class*="bold-headline"]),
    h3:not([class*="bold-headline"]),
    h4:not([class*="bold-headline"]),
    h5:not([class*="bold-headline"]),
    h6:not([class*="bold-headline"]),
    blockquote {
      @include breakpoint(container) {
        color: $secondary;
      }

      a {
        @include breakpoint(container) {
          color: $secondary;
        }
      }
    }

    p {
      @include breakpoint(container) {
        color: $secondary;
      }

      font-weight: normal;
      text-shadow: none;

      a {
        @include breakpoint(container) {
          color: $secondary;
        }
      }
    }

    .bold-headline.bold-headline--negative {
      @include breakpoint(container) {
        color: $secondary;
        text-shadow: none;

        a {
          color: $secondary;
        }
      }
    }
  }

  .bold-headline {
    z-index: 1;

    a {
      &:hover {
        text-decoration: none;
      }

      &:focus {
        text-decoration: underline;
      }
    }

    &.bold-headline--negative {
      color: $secondary;

      a {
        color: #fff;
      }

      text-shadow: 0 1px 1px #000;
      color: #fff;
    }

    margin-top: 0;
    margin-bottom: .7rem;
    font-size: calc(100% + 4vw);

    @include breakpoint(sm) {
      font-size: calc(100% + 2.5vw);
    }
  }

}

// Default overlay

.banner {
  &:after {
    position: absolute;
    top: 0;
    left: 0;
    display: block;
    width: 100%;
    height: 100%;
    content: "";
    -webkit-transition: all .5s ease-in-out;
    transition: all .5s ease-in-out;
    will-change: opacity;
    background: rgba(0, 0, 0, .5);
  }

  &:not([class*="bg-"]) {
    background: $secondary;
  }

  &[class*="bg-"]:after {
    background: inherit;
  }

}

// Alignment Variants

.banner--horizontal-center {
  text-align: center;
  max-width: 100%;

  .banner__container {
    @include breakpoint(sm) {
      //max-width: 100%;
    }
  }

  .banner__content {
    text-align: center;

    @include breakpoint(sm) {
      justify-content: center;
    }
  }
}

.banner--vertical-center {
  width: 100%;

  &:not([class*="bg-"]) {
    height: 100%;
  }

  .bttn {
    margin-right: auto;
    margin-left: auto
  }

  .banner__content {
    display: grid;
    width: 100%;
    //background: #fff;
    padding: $gutter;

    @include breakpoint(sm) {
      z-index: 1;
      flex-wrap: wrap;
      align-content: center;
      flex-direction: column;
      background: transparent;
      width: 100%;
      height: 100%;
      top: 0;
      background: transparent;
      padding: 1.25rem 0 2rem 0;

      >* {
        flex-basis: 100%;
      }
    }

    @include breakpoint(container) {
      padding: $gutter 0;
    }
  }

  .banner__container {
    @include breakpoint(sm) {
      z-index: 1;
      width: 100%;
      height: 100%;
      top: 0;
    }
  }
}

.banner--vertical-bottom.banner--horizontal-center {

  .banner__content {
    @include breakpoint(sm) {
      max-width: 100%;

      >* {
        margin-right: auto;
        margin-left: auto;
      }
    }
  }
}

.banner--horizontal-center {
  .banner__content {
    >* {
      margin-right: auto;
      margin-left: auto;
    }
  }
}


.banner--vertical-center.banner--horizontal-left {
  .bttn {
    margin-right: auto;
    margin-left: 0;
  }
}

.banner--vertical-bottom {
  .banner__content {
    position: relative;
    z-index: 1;
    display: grid;
    width: 100%;
    padding: $gutter;

    @include breakpoint(sm) {
      bottom: $desktop-width-gutter;
      background: transparent;
      padding: $gutter $gutter 0 $gutter;
      max-width: $container-width;
    }

    @include breakpoint(container) {
      padding: $gutter 0 0 0;
    }
  }
}

.banner--horizontal-left {
  @include breakpoint(sm) {
    justify-content: left;
  }

  .banner__content {
    @include breakpoint(sm) {
      max-width: 81.875em;
    }
  }

  .bttn {
    margin-right: auto;
  }

}

